  show up correctly in OpenRO.
- Fix "sp" command sending skill level 0 when unspecified (this wasn't
  a problem on Aegis, but was on eAthena).
- Hopefully support detection of Peco Lord Knight and other classes
  on OpenRO now.
- Roll back part of the above because portals were being detected as
  Stalkers.
- Fix monster avoiding teleport spamming.
- dcOnPM will no longer activate if AI is off.

New features:
- Beginnings of code that will allow skill usage on non-partied players.
  deltaHp condition added (currently useless to non-developers).
- Support for the 'charServer_ip', and 'charServer_port' options
  in servers.txt, which allow you to force connection to a specific
  map server.
- Support for eAthena servers. Set serverType to 3 for these servers.
- The _inInventory option's syntax has changed.
  Previous syntax:
    inInventory_name Red Potion,Blue Gem,AnotherItem
    inInventory_qty >5,>0,=10
  New syntax:
    inInventory Red Potion >5,Blue Gem,AnotherItem=10
- Support login error 1 as "Error: Server is closed".
- Use ai_cartAdd timeout if it's specified in timeouts.txt.
  This is for servers where you are disconnected when you try to add
  many items to the cart too quickly.
- A brand new console interface for Unix/Linux, which uses GNU readline.
  Input buffer corruption is now a thing of the past.
- Different RO servers can have different versions of the same field.
  For example, pRO is stuck with the old Payon while most other servers
  have the new Payon. OpenKore can now automatically select the correct
  field file by using servers.txt. You must have the latest fieldpack
  and the latest servers.txt from the latest tablepack.
- Support level 2 Teleport as well in blocks like useSelf_skill.
- Support for displaying broken weapons.
- A workaround for a server bug which causes autostorage to fail.
  See the config option 'relogAfterStorage'.
- Set attackDistanceAuto to 1 if you want attackDistance and